# UFS_UTILS

./: .gitignore  .gitmodules  .readthedocs.yaml  ASanSuppress.supp  CMakeLists.txt  LICENSE.md  README.md  VLabRepoQuickTips.txt  affinity_8c.html  affinity_8c.js  affinity_8c_source.html  annotated.html  annotated.js  annotated_dup.js  atmosphere_8F90.html  atmosphere_8F90_source.html  bilinear__interp_8c.html  bilinear__interp_8c_source.html  bilinear__interp_8h.html  bilinear__interp_8h_source.html  bu  bud  build_all.sh  chgres_8F90.html  chgres_8F90_source.html  chgres_8f90.html  chgres_8f90.js  chgres_8f90_source.html  chgres__cube_8fd_2model__grid_8F90.html  chgres__cube_8fd_2model__grid_8F90.js  chgres__cube_8fd_2model__grid_8F90_source.html  chgres__cube_8fd_2program__setup_8f90.html  chgres__cube_8fd_2program__setup_8f90.js  chgres__cube_8fd_2program__setup_8f90_source.html  chgres__cube_8fd_2utils_8f90.html  chgres__cube_8fd_2utils_8f90.js  chgres__cube_8fd_2utils_8f90_source.html  chgres__utils_8f90.html  chgres__utils_8f90.js  chgres__utils_8f90_source.html  (+839 more)
sorc/: CMakeLists.txt  build_all.sh  build_all_ufs_utils.sh  build_chgres.sh  build_chgres_cube.sh  build_cmake.sh  build_cycle.sh  build_emcsfc.sh  build_fre-nctools.sh  build_gettrk.sh  build_gridgen_sfc.sh  build_nems_util.sh  build_nst_tf_chg.sh  build_orog.sh  build_regional_grid.sh  build_sfc_climo_gen.sh  build_sfcanl_nsttfchg.sh  build_tropcy_NEMS.sh  fv3gfs_build.cfg  link_fixdirs.sh  link_fv3gfs.sh  machine-setup.sh  out  partial_build.sh  partial_ufs_build.sh  ufs_build.cfg
sorc/chgres_cube.fd/: CMakeLists.txt  atm_input_data.F90  atm_target_data.F90  atmosphere.F90  atmosphere_target_data.F90  chgres.F90  chgres_cube_utils.F90  grib2_util.F90  input_data.F90  input_data_utils.F90  make.sh  makefile  model_grid.F90  nst_input_data.F90  program_setup.F90  program_setup.f90  search_util.F90  search_util.f90  sfc_input_data.F90  sfc_target_data.F90  static_data.F90  surface.F90  surface_target_data.F90  thompson_mp.F90  thompson_mp_climo.F90  thompson_mp_climo_data.F90  utils.F90  utils.f90  wam_climo_data.f90  write_data.F90
sorc/chgres_tools.fd/: CMakeLists.txt  check.F90
sorc/chgres_tools2.fd/: CMakeLists.txt  check.F90
sorc/cpld_gridgen.fd/: CMakeLists.txt  angles.F90  charstrings.F90  cicegrid.F90  debugprint.F90  gen_fixgrid.F90  gengrid_kinds.F90  grdvars.F90  inputnml.F90  mapped_mask.F90  postwgts.F90  scripgrid.F90  topoedits.F90  tripolegrid.F90  vartypedefs.F90  vertices.F90
sorc/emcsfc_ice_blend.fd/: CMakeLists.txt  emcsfc_ice_blend.f90  out
sorc/emcsfc_snow2mdl.fd/: CMakeLists.txt  driver.F90  driver.f  grib_utils.F90  grib_utils.f  makefile  model_grid.F90  model_grid.f  program_setup.F90  program_setup.f  snow2mdl.F90  snow2mdl.f  snowdat.F90  snowdat.f
sorc/fre-nctools.fd/: CMakeLists.txt
sorc/fvcom_tools.fd/: CMakeLists.txt  fvcom_readme.md  kinds.f90  module_ncio.f90  module_nwp.f90  module_nwp_base.f90  process_FVCOM.f90  readme.md
sorc/gblevents.fd/: CMakeLists.txt  gblevents.f
sorc/gettrk.fd/: makefile
sorc/global_chgres.fd/: CMakeLists.txt  Makefile  chgres.f90  chgres_utils.f90  funcphys.f90  global_chgres_users_guide.md  machine_8.f90  nrlmsise00_sub.f90  nsst_chgres.f90  nstio_module.f90  num_parthds.f90  physcons.f90  read_write.f90  sfcsub.F  surface_chgres.f90
sorc/global_cycle.fd/: CMakeLists.txt  cycle.f90  land_increments.f90  machine.f90  makefile.sh  num_parthds.f90  read_write_data.f90  sfcsub.F  utils.F90
sorc/grid_tools.fd/: CMakeLists.txt
sorc/gridgen_sfc.fd/: driver.F90  make.sh  makefile
sorc/lsm_routines.fd/: CMakeLists.txt
sorc/mkgfsnemsioctl.fd/: CMakeLists.txt  mkgfsnemsioctl.f90
sorc/nemsio_chgdate.fd/: CMakeLists.txt  makefile  nemsio_chgdate.f90
sorc/nemsio_get.fd/: CMakeLists.txt  nemsio_get.f90
sorc/nemsio_read.fd/: CMakeLists.txt  nemsio_read.f90
sorc/nst_tf_chg.fd/: .gitignore  CMakeLists.txt  nc_check.f90  nst_tf_chg.f90  read_tfs_nc.f90  read_tfs_nc_2d.f90  setup.f90  smth9_msk.f90
sorc/ocean_merge.fd/: CMakeLists.txt  fv3gfs_ocean_merge.sh  input.nml  merge  merge_lake_ocnmsk.f90
sorc/ocnice_prep.fd/: #utils_#  .gitignore  CMakeLists.txt  arrays_mod.F90  ice.csv  init_mod.F90  ocncalc_mod.F90  ocnice_prep.sh  ocniceprep.F90  ocniceprep.nml  oiprep  restarts_mod.F90  utils_esmf_mod.F90  utils_mod.F90
sorc/orog.fd/: CMakeLists.txt  Makefile  Makefile.lakefrac  lakefrac.F90  mtnlm7_oclsm.f  netcdf_io.F90
sorc/orog_mask_tools.fd/: CMakeLists.txt
sorc/regional_grid.fd/: CMakeLists.txt  Makefile  hgrid_ak.f90  pietc.f90  pmat5.f90  psym2.f90
sorc/sfc_climo_gen.fd/: .gitignore  CMakeLists.txt  driver.F90  interp.F90  interp2.F90  interp_frac_cats.F90  makefile  model_grid.F90  output.f90  output2.f90  output_frac_cats.F90  program_setup.f90  search.f90  search2.f90  search_frac_cats.f90  source_grid.F90  utils.f90
sorc/vcgg.fd/: CMakeLists.txt  readme  run.sh
sorc/vcoord_gen.fd/: CMakeLists.txt  driver.f90  matrix_utils.f90  vcoord_gen.f90  wcoss.akbkgen.f90  wcoss.ttakbkgen.f90
sorc/weight_gen.fd/: CMakeLists.txt  lapack_gen.F  scrip.F90  splat.F
tests/: CMakeLists.txt  README.md  ftst_input_data.F90  ftst_utils.F90
tests/chgres_cube/: CMakeLists.txt  LSanSuppress.supp  config_fv3_tiled_warm_restart.nml  config_gfs_grib2.nml  ftst_convert_winds.F90  ftst_dint2p.F90  ftst_example.F90  ftst_msis2.1_lib.F90  ftst_program_setup.F90  ftst_program_setup_varmaps.F90  ftst_quicksort.F90  ftst_read_atm_gaussian_netcdf.F90  ftst_read_atm_grib2.F90  ftst_read_atm_netcdf.F90  ftst_read_nst_nemsio.F90  ftst_read_nst_netcdf.F90  ftst_read_sfc_gfs_nemsio.F90  ftst_read_sfc_grib2.F90  ftst_read_sfc_nemsio.F90  ftst_read_sfc_netcdf.F90  ftst_read_vcoord.F90  ftst_rh2spfh_gfs.F90  ftst_search_util.F90  ftst_sfc_input_data.F90  ftst_sort.F90  ftst_surface_interp.F90  ftst_surface_nst_landfill.F90  ftst_surface_regrid_many.F90  ftst_surface_search_many.F90  ftst_utils.F90  ftst_write_data.F90  msis2.1_test.F90
tests/chres_cube/: CMakeLists.txt  config.nml  config_fv3_netcdf.nml  config_spectral_sigio.nml  ftst_utils.F90  (+3 more)
(+11383 files in other folders)
