# This is the cmake build file for the sorc directory in the
# UFS_UTILS project.
#
# George Gayno
if(ICEBLEND)
  add_subdirectory(emcsfc_ice_blend.fd)
endif()
if(SNOW2MDL)
  add_subdirectory(emcsfc_snow2mdl.fd)
endif()
if(GCYCLE)
  if (OpenMP_Fortran_FOUND)
    add_subdirectory(global_cycle.fd)
    add_subdirectory(lsm_routines.fd)
  else()
    message(STATUS "OpenMP is required for global_cycle.fd and was NOT found, skipping ...")
  endif()
endif()
if(FRENCTOOLS)
  add_subdirectory(fre-nctools.fd)
endif()
if(GRIDTOOLS)
  add_subdirectory(grid_tools.fd)
endif()
if(CHGRES)
  add_subdirectory(chgres_cube.fd)
endif()
if(OROG_MASK_TOOLS)
  add_subdirectory(orog_mask_tools.fd)
endif()
if(SFC_CLIMO_GEN)
  add_subdirectory(sfc_climo_gen.fd)
endif()
if(VCOORD_GEN)
  add_subdirectory(vcoord_gen.fd)
endif()
if(FVCOMTOOLS)
  add_subdirectory(fvcom_tools.fd)
endif()
if(GBLEVENTS)
  add_subdirectory(gblevents.fd)
endif()
if(CPLD_GRIDGEN)
add_subdirectory(cpld_gridgen.fd)
endif()
if(WEIGHT_GEN)
  add_subdirectory(weight_gen.fd)
endif()
if(OCEAN_MERGE)
  add_subdirectory(ocean_merge.fd)
endif()

